# loggerService

./: CMakeLists.txt  Dockerfile  conanfile.txt  config.json
include/: LogController.h  LogEntry.h  LogStorage.h
src/: LogController.cpp  LogStorage.cpp  main.cpp
